Small style fix to vertically align text on modal element

--- a/css/app.css
+++ b/css/app.css
@@ -153,7 +153,7 @@ a {
   position: absolute;
   top: 50%;
   width: 100%;
-  margin-top: -16%;
+  margin-top: -18%;
   text-align: center;
 }
 
